# Projects

./: .gitignore
SeamCut/: CMakeLists.txt  main.cpp
VoxelCarving/: CMakeLists.txt  Makefile  P.txt  README.txt  VoxelCarving.cpp
